// Copyright Â© 2018 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "lorawan-stack/api/identifiers.proto";
import "lorawan-stack/api/keys.proto";
import "lorawan-stack/api/lorawan.proto";
import "lorawan-stack/api/metadata.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

// Uplink message from the end device to the network
message UplinkMessage {
  option (gogoproto.populate) = false;

  // Mapping from UDP message (other fields can be set in "advanced"):
  //
  // - time: rx_metadata.time
  // - tmst: rx_metadata.timestamp
  // - freq: settings.frequency
  // - modu: settings.modulation
  // - datr: settings.data_rate_index (and derived fields)
  // - codr: settings.coding_rate
  // - size: len(raw_payload)
  // - data: raw_payload (and derived payload)
  // - rsig: rx_metadata
  //  - ant: rx_metadata.antenna_index
  //  - chan: rx_metadata.channel_index
  //  - rssis: rx_metadata.rssi
  //  - lsnr: rx_metadata.snr

  // Mapping from BACKEND message:
  //
  // - PHYPayload: raw_payload
  // - FRMPayload: payload.mac_payload.frm_payload
  // - DevEUI: end_device.dev_eui
  // - DevAddr: end_device.dev_addr
  // - ULMetadata:
  //  - DevEUI: end_device.dev_eui
  //  - DevAddr: end_device.dev_addr
  //  - FPort: payload.mac_payload.f_port
  //  - FCntUp: payload.mac_payload.f_hdr.f_cnt
  //  - Confirmed: payload.mhdr.m_type
  //  - DataRate: settings.data_rate_index (and derived fields)
  //  - ULFreq: settings.frequency
  //  - RecvTime: included in each rx_metadata
  //  - GWCnt: derived from rx_metadata contents
  //  - GWInfo:
  //   - ID: rx_metadata.gateway_id
  //   - RSSI: rx_metadata.rssi
  //   - SNR: rx_metadata.snr
  //   - Lat: rx_metadata.location.latitude
  //   - Lon: rx_metadata.location.longitude

  bytes raw_payload = 1;
  Message payload = 2;
  EndDeviceIdentifiers end_device_ids = 3 [(gogoproto.customname) = "EndDeviceIDs"];
  TxSettings settings = 4 [(gogoproto.nullable) = false];
  repeated RxMetadata rx_metadata = 5;
  // Server time when the Gateway Server received the message.
  google.protobuf.Timestamp received_at = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  repeated string correlation_ids = 7 [(gogoproto.customname) = "CorrelationIDs"];
}

// Downlink message from the network to the end device
message DownlinkMessage {
  option (gogoproto.populate) = false;

  // Mapping from UDP message:
  //
  // imme: -
  // tmst: tx_metadata.timestamp
  // time: tx_metadata.time
  // freq: settings.frequency
  // rfch: (0)
  // powe: settings.tx_power
  // modu: settings.modulation
  // datr: settings.data_rate_index (derived)
  // codr: settings.coding_rate
  // fdev: (derived from bandwidth)
  // ipol: settings.polarization_inversion
  // prea: [settings.advanced]
  // size: (derived from len(raw_payload))
  // data: raw_payload
  // ncrc: [settings.advanced]

  // Mapping from BACKEND message:
  //
  // - PHYPayload: raw_payload
  // - FRMPayload: payload.mac_payload.frm_payload
  // - DevEUI: end_device.dev_eui
  // - DevAddr: end_device.dev_addr
  // - DLMetadata:
  //  - DevEUI: end_device.dev_eui
  //  - DevAddr: end_device.dev_addr
  //  - FPort: payload.mac_payload.f_port
  //  - FCntDown: payload.mac_payload.f_hdr.f_cnt
  //  - Confirmed: payload.mhdr.m_type
  //  - RxDelay1:                                                           | TODO: Rx1/2 selection
  //  - DataRate1/DataRate2: settings.data_rate_index (and derived fields)  |
  //  - DLFreq1/DLFreq2: settings.frequency                                 |
  //  - GWInfo:
  //   - ID: tx_metadata.gateway_id

  bytes raw_payload = 1;
  Message payload = 2;
  EndDeviceIdentifiers end_device_ids = 3 [(gogoproto.customname) = "EndDeviceIDs"];
  TxSettings settings = 4 [(gogoproto.nullable) = false];
  TxMetadata tx_metadata = 5 [(gogoproto.nullable) = false];
  repeated string correlation_ids = 6 [(gogoproto.customname) = "CorrelationIDs"];
}

message TxAcknowledgment {
  repeated string correlation_ids = 1 [(gogoproto.customname) = "CorrelationIDs"];

  enum Result {
    SUCCESS = 0;
    UNKNOWN_ERROR = 1;
    TOO_LATE = 2;
    TOO_EARLY = 3;
    COLLISION_PACKET = 4;
    COLLISION_BEACON = 5;
    TX_FREQ = 6;
    TX_POWER = 7;
    GPS_UNLOCKED = 8;
  }
  Result result = 2;
}

message ApplicationUplink {
  // Join Server issued identifier for the session keys used by this uplink.
  string session_key_id = 1 [(gogoproto.customname) = "SessionKeyID"];
  uint32 f_port = 2;
  uint32 f_cnt = 3;
  bytes frm_payload = 4 [(gogoproto.customname) = "FRMPayload"];
  repeated RxMetadata rx_metadata = 5;
  map<string,Location> locations = 6;
}

message ApplicationJoinAccept {
  // Join Server issued identifier for the session keys negotiated in this join.
  string session_key_id = 1 [(gogoproto.customname) = "SessionKeyID"];
  // The (encrypted) Application Session Key.
  KeyEnvelope app_s_key = 2;
}

message ApplicationDownlink {
  option (gogoproto.populate) = false;

  uint32 f_port = 1;
  uint32 f_cnt = 2;
  bytes frm_payload = 3 [(gogoproto.customname) = "FRMPayload"];
  bool confirmed = 4;
  repeated string correlation_ids = 5 [(gogoproto.customname) = "CorrelationIDs"];
}

message ApplicationDownlinks {
  repeated ApplicationDownlink downlinks = 1;
}

message ApplicationUp {
  EndDeviceIdentifiers end_device_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  repeated string correlation_ids = 2 [(gogoproto.customname) = "CorrelationIDs"];

  oneof up {
    ApplicationUplink uplink_message = 3;
    ApplicationJoinAccept join_accept = 4;
    ApplicationDownlink downlink_ack = 5;
    ApplicationDownlink downlink_nack = 6;
    ApplicationDownlink downlink_sent = 7;
    ApplicationDownlink downlink_queued = 8;
    ApplicationDownlinks downlink_queue_invalidated = 9;
  }
}

enum PayloadFormatter {
  // No payload formatter to work with raw payload only.
  FORMATTER_NONE = 0;
  // Use payload formatter for the end device type from a repository.
  FORMATTER_REPOSITORY = 1;
  // gRPC service payload formatter. The parameter is the host:port of the service.
  FORMATTER_GRPC_SERVICE = 2;
  // Custom payload formatter that executes Javascript code. The parameter is a JavaScript filename.
  FORMATTER_JAVASCRIPT = 3;
  // CayenneLPP payload formatter.
  FORMATTER_CAYENNELPP = 4;
  // More payload formatters can be added.
}

message MessagePayloadFormatters {
  // Payload formatter for uplink messages, must be set together with its parameter.
  PayloadFormatter up_formatter = 1;
  // Parameter for the up_formatter, must be set together.
  string up_formatter_parameter = 2;
  // Payload formatter for downlink messages, must be set together with its parameter.
  PayloadFormatter down_formatter = 3;
  // Parameter for the down_formatter, must be set together.
  string down_formatter_parameter = 4;
}
